Tue Nov 15 06:56:51 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* examples/Makefile.am:
	* examples/POA/Explicit_Activation/Makefile.am:
	* orbsvcs/Naming_Service/Makefile.am:
	* orbsvcs/examples/CosEC/RtEC_Based/tests/Multiple/Makefile.am:
	* orbsvcs/examples/Log/RTEvent/Makefile.am:
	* orbsvcs/examples/Notify/Lanes/Makefile.am:
	* orbsvcs/examples/Notify/ThreadPool/Makefile.am:
	* orbsvcs/orbsvcs/Makefile.am:
	* orbsvcs/tests/Makefile.am:
	* orbsvcs/tests/Notify/Basic/Makefile.am:
	* orbsvcs/tests/Notify/Blocking/Makefile.am:
	* orbsvcs/tests/Notify/Destroy/Makefile.am:
	* orbsvcs/tests/Notify/Discarding/Makefile.am:
	* orbsvcs/tests/Notify/Driver/Makefile.am:
	* orbsvcs/tests/Notify/MT_Dispatching/Makefile.am:
	* orbsvcs/tests/Notify/Ordering/Makefile.am:
	* orbsvcs/tests/Notify/RT_lib/Makefile.am:
	* orbsvcs/tests/Notify/Reconnecting/Makefile.am:
	* orbsvcs/tests/Notify/Sequence_Multi_ETCL_Filter/Makefile.am:
	* orbsvcs/tests/Notify/Sequence_Multi_Filter/Makefile.am:
	* orbsvcs/tests/Notify/Structured_Filter/Makefile.am:
	* orbsvcs/tests/Notify/Structured_Multi_Filter/Makefile.am:
	* orbsvcs/tests/Notify/lib/Makefile.am:
	* orbsvcs/tests/Notify/performance-tests/Filter/Makefile.am:
	* orbsvcs/tests/Notify/performance-tests/RedGreen/Makefile.am:
	* orbsvcs/tests/Notify/performance-tests/Throughput/Makefile.am:
	* orbsvcs/tests/Security/Crash_Test/Makefile.am:
	* orbsvcs/tests/Security/MT_IIOP_SSL/Makefile.am:
	* orbsvcs/tests/Security/Secure_Invocation/Makefile.am:
	* performance-tests/Makefile.am:
	* tao/Makefile.am:

	  Regenerated.

	* configure.ac:

	  Add new files to AC_CONFIG_FILES.

	* examples/CSD_Strategy/Makefile.am:
	* examples/CSD_Strategy/ThreadPool/Makefile.am:
	* examples/CSD_Strategy/ThreadPool2/Makefile.am:
	* examples/CSD_Strategy/ThreadPool3/Makefile.am:
	* examples/CSD_Strategy/ThreadPool4/Makefile.am:
	* examples/CSD_Strategy/ThreadPool5/Makefile.am:
	* examples/CSD_Strategy/ThreadPool6/Makefile.am: